<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_horizontal_margin"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.rafaels.mislugares.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/t_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_name"
            android:hint="@string/hint_name">
            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/t_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="@string/type"
            android:textAppearance="?android:textAppearanceMedium"/>
        <Spinner
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/t_type"
            android:layout_toRightOf="@+id/t_type" />
        <TextView
            android:id="@+id/t_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_type"
            android:text="@string/direction_name"
            android:textAppearance="?android:textAppearanceMedium"/>
        <EditText
            android:id="@+id/direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_direction"
            android:hint="@string/hint_direction"
            android:inputType="textPostalAddress"/>
        <TextView
            android:id="@+id/t_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direction"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceMedium"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_phone"
            android:layout_alignTop="@id/t_phone"
            android:hint="@string/hint_phone"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:text="@string/url"
            android:textAppearance="?android:textAppearanceMedium"/>
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_url"
            android:hint="@string/hint_url"
            android:inputType="textUri"/>
        <TextView
            android:id="@+id/t_comen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/comen"
            android:textAppearance="?android:textAppearanceMedium" />
        <EditText
            android:id="@+id/comen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_comen"
            android:hint="@string/hint_comen"
            android:inputType="textMultiLine"/>

    </RelativeLayout>

</ScrollView>
